Fix alignment issue

--- a/styles.css
+++ b/styles.css
@@ -90,25 +90,26 @@ img.car-img {
     color: #686D76;
 }
 
-.wrapper {
+.engine-info {
     display: flex;
     align-items: center;
-    gap: 2rem;
+    justify-content: space-between;
+    margin: 6px;
+    gap: 2.5rem;
 }
 
-.wrap-label, .wrap-desc {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
+.label {
+    font-size: 1rem;
+    font-style: italic;
+    font-weight: bold;
+    color: #373A40;
 }
 
-.wrap-desc {
-    gap: 3px;
-}
-
-.label, .desc {
-    margin: 4px 0 4px 0;
+.value {
+    width: 115px;
+    font-size: 0.85rem;
+    color: #4C585B;
+    text-align: left;
 }
 
 .divider {
@@ -120,16 +121,6 @@ img.car-img {
     border-bottom-right-radius: 10%;
 }
 
-.label {
-    font-size: 1rem;
-    font-style: italic;
-    color: #373A40;
-}
-
-.desc {
-    font-size: 0.85rem;
-    color: #4C585B;
-}
 
 .flag {
     width: 40px;
